Added a adminview.html.html page

--- a/UI/created_interventions.html
+++ b/UI/created_interventions.html
@@ -58,7 +58,7 @@
 <div class = "form2"> 
 <table cellspacing="0" cellpadding="0" align="center">
   <tr>
-    <th>Corruption Case</th>
+    <th>Intervation Case</th>
     <th>Location</th>
     <th>Status</th>
     <th></th>
