Added some links styled the submit buttons

--- a/UI/create_redflag.html
+++ b/UI/create_redflag.html
@@ -46,9 +46,11 @@
 
   </ul> 
 
-</div>  <div class="deliveryorder-page">
+  <br><br><br>
+
+</div>  <div class="create_redflag-page">
   <div class="form">
-      <form class="deliveryorder-form">
+      <form class="create_redflag-form">
       <input type="text" placeholder="Subject" required>
       <input type="text" placeholder="Office/Place">
       <input type="text" placeholder="Co-ordinates" required>
