--- a/UI/create_intervation.html
+++ b/UI/create_intervation.html
@@ -50,13 +50,13 @@
 
 <br><br><br>
 
-  <div class="deliveryorder-page">
+  <div class="create_intervation-page">
   <div class="form">
-      <form class="deliveryorder-form">
+      <form class="create_intervation-form">
       <input type="text" placeholder="Subject" required>
       <input type="text" placeholder="Place">
       <input type="text" placeholder="Co-ordinates" required>
-      <textarea rows="4" cols="50" placeholder="Details Here"></textarea>
+      <textarea rows="4" cols="50" placeholder="Comments..."></textarea>
       Select a Image : <input type="file" name="image" accept="image/*">
       Select a Video : <input type="file" name="video" accept="video/*">
 
