Added details_page.html, links

--- a/UI/create_intervation.html
+++ b/UI/create_intervation.html
@@ -64,6 +64,8 @@
       <!--<input type="submit" name="Create Order"> -->
       <button>Create</button>
       <!--<p class="message">Already Registered?<a href="#">Login</a></p>-->
+      <br><br><br>
+      <a href="created_interventions.html"><button>Cancel
 
 
 
