--- a/UI/created_interventions.html
+++ b/UI/created_interventions.html
@@ -64,7 +64,7 @@
     <th></th>
   </tr>
   <tr>
-    <td>Broken Thing (Details)</td>
+    <td>Broken Thing <a href="details_page.html">(Details)</a></td>
     <td>Location of broken thing lat 1.20, long 24</td>
     <td>Investgating</td>
    	 <td><!-- <button type="button">Edit Geolocation</button> -->
@@ -81,7 +81,7 @@
     </td>
   </tr>
   <tr>
-    <td>Broken Thing (Details)</td>
+    <td>Broken Thing <a href="details_page.html">(Details)</a></td>
     <td>Location of broken thing lat 1.20, long 24</td>
     <td>Investgating</td>
      <td><!-- <button type="button">Edit Geolocation</button> -->
@@ -98,7 +98,7 @@
     </td>
   </tr>
   <tr>
-    <td>Broken Thing (Details)</td>
+    <td>Broken Thing <a href="details_page.html">(Details)</a></td>
     <td>Location of broken thing lat 1.20, long 24</td>
     <td>Investgating</td>
      <td><!-- <button type="button">Edit Geolocation</button> -->
@@ -115,7 +115,7 @@
     </td>
   </tr>
   <tr>
-    <td>Broken Thing (Details)</td>
+    <td>Broken Thing <a href="details_page.html">(Details)</a></td>
     <td>Location of broken thing lat 1.20, long 24</td>
     <td>Investgating</td>
      <td><!-- <button type="button">Edit Geolocation</button> -->
@@ -132,7 +132,7 @@
     </td>
   </tr>
   <tr>
-    <td>Broken Thing (Details)</td>
+    <td>Broken Thing <a href="details_page.html">(Details)</a></td>
     <td>Location of broken thing lat 1.20, long 24</td>
     <td>Investgating</td>
     <td><!-- <button type="button">Edit Geolocation</button> -->
