--- a/UI/created_redflags.html
+++ b/UI/created_redflags.html
@@ -64,7 +64,7 @@
     <th></th>
   </tr>
   <tr>
-    <td>Corrupt Officer (Details)</td>
+    <td>Corrupt Officer <a href="details_page.html">(Details)</a></td>
     <td>Office of the officer lat 1.20, long 24</td>
     <td>Investgating</td>
    	<td>
@@ -83,7 +83,7 @@
   </tr>
   </tr>
   <tr>
-    <td>Corrupt Officer (Details)</td>
+    <td>Corrupt Officer <a href="details_page.html">(Details)</a></td>
     <td>Office of the officer lat 1.20, long 24</td>
     <td>Investgating</td>
     <td>
@@ -102,7 +102,7 @@
   </tr>
   </tr>
   <tr>
-    <td>Corrupt Officer (Details)</td>
+    <td>Corrupt Officer <a href="details_page.html">(Details)</a></td>
     <td>Office of the officer lat 1.20, long 24</td>
     <td>Investgating</td>
     <td>
@@ -121,7 +121,7 @@
   </tr>
   </tr>
   <tr>
-    <td>Corrupt Officer (Details)</td>
+    <td>Corrupt Officer <a href="details_page.html">(Details)</a></td>
     <td>Office of the officer lat 1.20, long 24</td>
     <td>Investgating</td>
        	<td>
@@ -140,7 +140,7 @@
   </tr>
   </tr>
   <tr>
-    <td>Corrupt Officer (Details)</td>
+    <td>Corrupt Officer <a href="details_page.html">(Details)</a></td>
     <td>Office of the officer lat 1.20, long 24</td>
     <td>Investgating</td>
     <td>
