--- a/UI/details_page.html
+++ b/UI/details_page.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html>
 <head>
-  <title>Delivery Order Form</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+	<title></title>
+	    <link rel="stylesheet" href="style.css">
 
+</head>
 <body>
 <div class="menudiv">
   <ul>
@@ -46,31 +47,17 @@
 
   </ul> 
 
-  <br><br><br>
+</div>
 
-</div>  <div class="create_redflag-page">
-  <div class="form">
-      <form class="create_redflag-form">
-      <input type="text" placeholder="Subject" required>
-      <input type="text" placeholder="Office/Place">
-      <input type="text" placeholder="Co-ordinates" required>
-      <textarea rows="4" cols="50" placeholder="Comments..."></textarea>
-      Select a Image : <input type="file" name="image" accept="image/*">
-      Select a Video : <input type="file" name="video" accept="video/*">
+<br><br><br>
 
+<p>Incident Name</p>  
+<p>Comments of the Incident</p> 
+<img src="bridge.jpeg" alt="BrokenBridge">
+<iframe width="656" height="369" src="https://www.youtube.com/embed/8xyQvRlLnnM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-      <!--<input type="submit" name="Create Order"> -->
-      <button>Create</button>
-      <!--<p class="message">Already Registered?<a href="#">Login</a></p>-->
-      <br><br><br>
-      <a href="created_redflags.html"><button>Cancel</button></a> 
+<a href="created_interventions.html">Back</a>
 
-
-
-      </form>
-
-  </div>
-  </div>
 
 </body>
 </html>
