Added Edit Location web pages and orgernised the folder

--- a/UI/create_redflag.html
+++ b/UI/create_redflag.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Delivery Order Form</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -57,6 +57,8 @@
       <textarea rows="4" cols="50" placeholder="Comments..."></textarea>
       Select a Image : <input type="file" name="image" accept="image/*">
       Select a Video : <input type="file" name="video" accept="video/*">
+
+      <input type="url" placeholder="youtube URL">
 
 
       <!--<input type="submit" name="Create Order"> -->
