--- a/UI/created_redflags.html
+++ b/UI/created_redflags.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title></title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="senditicon.png"/>
-
+    <link rel="stylesheet" href="css/style.css">
+<!--     <link rel="shortcut icon" type="image/x-icon" href="ireporter.png"/>
+ -->
 </head>
 <body>
 
@@ -64,13 +64,13 @@
     <th></th>
   </tr>
   <tr>
-    <td>Corrupt Officer <a href="details_page.html">(Details)</a></td>
+    <td>Corrupt Officer <a href="details_page_redflag.html">(Details)</a></td>
     <td>Office of the officer lat 1.20, long 24</td>
     <td>Investgating</td>
    	<td>
 <!--     <button type="button">Edit Geolocation</button>
  -->   
-    <form action="create_redflag.html">
+    <form action="edit_geolocation_redflag.html">
        <input type="submit" value="Edit Geolocation">
     </form>
     </td> 
@@ -83,13 +83,13 @@
   </tr>
   </tr>
   <tr>
-    <td>Corrupt Officer <a href="details_page.html">(Details)</a></td>
+    <td>Corrupt Officer <a href="details_page_redflag.html">(Details)</a></td>
     <td>Office of the officer lat 1.20, long 24</td>
     <td>Investgating</td>
     <td>
 <!--     <button type="button">Edit Geolocation</button>
  -->   
-    <form action="create_redflag.html">
+    <form action="edit_geolocation_redflag.html">
        <input type="submit" value="Edit Geolocation">
     </form>
     </td> 
@@ -102,13 +102,13 @@
   </tr>
   </tr>
   <tr>
-    <td>Corrupt Officer <a href="details_page.html">(Details)</a></td>
+    <td>Corrupt Officer <a href="details_page_redflag.html">(Details)</a></td>
     <td>Office of the officer lat 1.20, long 24</td>
     <td>Investgating</td>
     <td>
 <!--     <button type="button">Edit Geolocation</button>
  -->   
-    <form action="create_redflag.html">
+    <form action="edit_geolocation_redflag.html">
        <input type="submit" value="Edit Geolocation">
     </form>
     </td> 
@@ -121,13 +121,13 @@
   </tr>
   </tr>
   <tr>
-    <td>Corrupt Officer <a href="details_page.html">(Details)</a></td>
+    <td>Corrupt Officer <a href="details_page_redflag.html">(Details)</a></td>
     <td>Office of the officer lat 1.20, long 24</td>
     <td>Investgating</td>
        	<td>
 <!--     <button type="button">Edit Geolocation</button>
  -->   
-    <form action="create_redflag.html">
+    <form action="edit_geolocation_redflag.html">
        <input type="submit" value="Edit Geolocation">
     </form>
     </td> 
@@ -140,13 +140,13 @@
   </tr>
   </tr>
   <tr>
-    <td>Corrupt Officer <a href="details_page.html">(Details)</a></td>
+    <td>Corrupt Officer <a href="details_page_redflag.html">(Details)</a></td>
     <td>Office of the officer lat 1.20, long 24</td>
     <td>Investgating</td>
     <td>
 <!--     <button type="button">Edit Geolocation</button>
  -->   
-    <form action="create_redflag.html">
+    <form action="edit_geolocation_redflag.html">
        <input type="submit" value="Edit Geolocation">
     </form>
     </td> 
