--- a/UI/edit_geolocation_redflag.html
+++ b/UI/edit_geolocation_redflag.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	    <link rel="stylesheet" href="style.css">
-
+  <title>Delivery Order Form</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 <div class="menudiv">
   <ul>
@@ -47,17 +46,25 @@
 
   </ul> 
 
-</div>
+  <br><br><br>
 
-<br><br><br>
+</div>  <div class="change_geolocation-page">
+  <div class="geolocation_input">
+      <input type="text" placeholder="latitude" required>
+      <input type="text" placeholder="longitude">
+      <a href="created_redflags.html"><button>change</button></a> 
+      <a href="created_redflags.html"><button>Cancel</button></a> 
 
-<p>Incident Name</p>  
-<p>Comments of the Incident</p> 
-<img src="bridge.jpeg" alt="BrokenBridge">
-<iframe width="656" height="369" src="https://www.youtube.com/embed/8xyQvRlLnnM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<a href="created_interventions.html">Back</a>
 
+  </div>
+
+  <div>
+
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4084401.633346969!2d30.057670033067218!3d1.3726057138458037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1771a69f6499f945%3A0x874155ce43014549!2sUganda!5e0!3m2!1sen!2sug!4v1543085941262" width="1500" height="700" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  </div>
+  </div>
 
 </body>
 </html>
