--- a/UI/index.html
+++ b/UI/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>iReporter</title>
-	<link rel="stylesheet" href="style.css">
-	<link rel="shortcut icon" type="image/x-icon" href="senditicon.png"/>
-</head>
+    <link rel="stylesheet" href="css/style.css">
+<!-- 	<link rel="shortcut icon" type="image/x-icon" href="ireporter.png"/>
+ --></head>
 <body>
 <div class="menudiv">
 	<ul>
