--- a/UI/adminview.html
+++ b/UI/adminview.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title></title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="senditicon.png"/>
-
+    <link rel="stylesheet" href="css/style.css">
+<!--     <link rel="shortcut icon" type="image/x-icon" href="ireport=.png"/>
+ -->
 </head>
 <body>
 
