--- a/UI/loginandregistration.html
+++ b/UI/loginandregistration.html
@@ -1,9 +1,9 @@
 <html>
 <head>
   <title>Login and Registration</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="senditicon.png"/>
-</head>
+    <link rel="stylesheet" href="css/style.css">
+<!--     <link rel="shortcut icon" type="image/x-icon" href="ireporter.png"/>
+ --></head>
 
 <body>
 <div class="menudiv">
